--- a/StockAnalysis/StockAnalysis.csproj
+++ b/StockAnalysis/StockAnalysis.csproj
@@ -213,6 +213,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509022358198_InitialMigrations.cs" />
+    <Compile Include="Migrations\201509022358198_InitialMigrations.Designer.cs">
+      <DependentUpon>201509022358198_InitialMigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509030000106_EricTest.cs" />
+    <Compile Include="Migrations\201509030000106_EricTest.Designer.cs">
+      <DependentUpon>201509030000106_EricTest.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\StockModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -335,6 +344,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201509022358198_InitialMigrations.resx">
+      <DependentUpon>201509022358198_InitialMigrations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509030000106_EricTest.resx">
+      <DependentUpon>201509030000106_EricTest.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
