--- a/StockAnalysis/Web.config
+++ b/StockAnalysis/Web.config
@@ -31,7 +31,7 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.6" />
+    <compilation debug="false" targetFramework="4.6" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
