--- a/StockAnalysis/packages.config
+++ b/StockAnalysis/packages.config
@@ -8,6 +8,7 @@
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net46" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
@@ -38,6 +39,7 @@
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net46" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
