Turned compilation debug off

--- a/StockAnalysis/Web.config
+++ b/StockAnalysis/Web.config
@@ -37,8 +37,8 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off"></customErrors>
-    <compilation debug="true" targetFramework="4.6" />
+    <!--<customErrors mode="Off"></customErrors>-->
+    <compilation debug="false" targetFramework="4.6" />
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
